# nlp-project

./: .env_template  .gitignore  Dockerfile  README.md  app.dockerfile  docker-compose.yml  main.py  main_with_rag.py  pyproject.toml  test_analyze_endpoint.py  test_main.py  test_rag.py  test_rag_endpoint.py  ui.py
