[project]
name = "nlp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
